@@ -56,6 +56,7 @@ Merged from 0.8:
    (CASSANDRA-3351)
  * remove incorrect optimization from slice read path (CASSANDRA-3390)
  * Fix race in AntiEntropyService (CASSANDRA-3400)
+ * allow encryption only between datacenters (CASSANDRA-2802)
 
 
 1.0.0-final
